<resources>
    <string name="app_name">Moodscape</string>
    <string name="title">puhon</string>
    <string name="stars">TODO</string>
    <string name="tagline">Monitor your daily moods and make a list of your goals today!</string>
    <string name="sign_up">SIGN UP</string>
    <string name="login">login</string>
    <string name="tagline2">Glad to see you here!</string>
    <string name="age">Age</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="password2">Password</string>
    <string name="loginD">TODO</string>
    <string name="welcome">Welcome</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login2">Login</string>
    <string name="hey_your_feelings_are_valid">Hey, your feelings are valid.</string>
    <string name="text">Some days will be harder to get up to, some days will be unusual. But you are free to keep going anyway. Let genuine days remind you, you are more than what is behind you.</string>
    <string name="mainmenudesign">TODO</string>
    <string name="home_button">TODO</string>
    <string name="reminders">TODO</string>
    <string name="settings">TODO</string>
    <string name="moods">MOODS</string>
    <string name="mood">Select your mood.</string>
    <string name="mood_title">How are you\nfeeling today?</string>
    <string name="mood_title_uncut">How are you feeling today?</string>
    <string name="mood_great">\tmood seems great!</string>
    <string name="mood_null">\tno mood recorded today :(</string>
    <string name="mood_others">\tbrighten your mood today!</string>
    <string name="sleep_great">\tsleep score seems great!</string>
    <string name="sleep_null">\tno sleep recorded today :(</string>
    <string name="sleep_others">\tget enough sleep please :(</string>
    <string name="select">Select</string>
    <string name="view_progress">Progress Report</string>
    <string name="summary_text">Summary</string>
    <string name="overall_text">Overall Report</string>
    <string name="input_text">My Input Today</string>
    <string name="mchart_title">Mood Chart</string>
    <string name="gchart_title">Goals Chart</string>
    <string name="calendar">Calendar</string>
    <string name="daily_mood">DAILY MOOD</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string-array name="spinner">
        <item>By Week&#160;&#160;&#160;&#160;</item>
        <item>By Month&#160;&#160;&#160;&#160;&#160;</item>
    </string-array>
    <string-array name="spinner1">
        <item>By Week&#160;&#160;&#160;&#160;&#160;&#160;&#160;</item>
    </string-array>
    <string name="thank_you">Thank you image.</string>
    <string name="intro_design2">TODO</string>
    <string name="get_started_intro">Get Started</string>
    <string name="get_quote">Some days will be harder to get up to, some days will be unusual. But you are free to keep going anyway. Let genuine days remind you, you are more than what is behind you.</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="profile">Image</string>
    <string name="Name">Name</string>
    <string name="age2">Age</string>
    <string name="happy">Happy</string>
    <string name="sad">Sad</string>
    <string name="angry">Angry</string>
    <string name="confirm">Confirm</string>
    <string name="confirm1">Confirm</string>
    <string name="continue_btn">Continue</string>
    <string name="mood_tag_txt">How are you feeling today?</string>
    <string name="fearful">Fearful</string>
    <string name="disgusted">Disgusted</string>
    <string name="surprised">Surprised</string>
    <string name="mood_img">TODO</string>
    <string name="mood_des">TODO</string>
    <string name="q1">Where are you right now?</string>
    <string name="q2">Who are you with?</string>
    <string name="q3">Do these feelings happen often?</string>
    <string name="q4">What do you think is the reason behind it?</string>
    <string name="q5">What are you planning to do now?</string>
    <string name="confirm_q">CONFIRM</string>
    <string name="guide_questions">Guide Questions</string>
    <string name="view_summary">VIEW SUMMARY</string>
    <string name="daily_logging_title">Daily Mood Logging</string>
    <string name="daily_goals_title">Daily Goals</string>
    <string name="stress_act_title">Stress-Relieving Activities</string>
    <string name="daily_logging_text">Start your day by logging your current mood. Choose from a diverse range of emotions that best represent how you feel. By consistently tracking your moods, you\'ll notice patterns, triggers, and trends, enabling you to make positive changes in your life.</string>
    <string name="daily_goals_text">Set achievable daily goals to enhance your well-being and productivity. Whether it\'s finding time for self-care, staying physically active, or accomplishing a personal project, Moodscape helps you stay focused and motivated. Check off completed goals and reflect on missed ones to foster growth and continuous improvement.</string>
    <string name="stress_act_text">Life can get overwhelming at times, but Moodscape has got you covered. Discover a curated list of stress-relieving activities tailored to suit your needs. From mindfulness exercises and meditation to quick relaxation techniques, you can find solace and peace in just a few minutes.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_goals_for_today">No goals for today.</string>
    <string name="taking_care_of_yourself_is_productive">Taking care of yourself is productive.</string>
    <string name="today">Today</string>
    <string name="history">History</string>
    <string name="hi_user">Hi User!</string>
    <string name="_10_00_pm">10:00 PM</string>
    <string name="add_goals">ADD GOALS</string>
    <string name="done">DONE</string>
    <string name="well_done_on_taking_time_to_nreflect_on_your_thoughts">Well done on taking time to\nreflect on your thoughts!</string>
    <string name="well_done_on_taking_time_to_nreflect_on_your_thoughts_uncut">Well done on taking time to reflect on your thoughts!</string>
    <string name="hoping_the_best_for_you_see_you_again">Hoping the best for you. See you again!</string>
    <string name="back">Back</string>
    <string name="meditate">Meditate</string>
    <string name="alleviating_stress">Alleviating stress</string>
    <string name="watch_funny_videos">Watch Funny Videos</string>
    <string name="laughter_is_the_best_medicine">Laughter is the best medicine. A good belly laugh not only relieves stress but also generates positive physical changes in the body.</string>
    <string name="title_activity_stress1">stress1</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="agree_tos">I have read and agree to the <b>Terms of Service</b>.</string>
</resources>