<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#253350"
    tools:context=".moods">


    <Button
        android:id="@+id/btn_next"
        android:layout_width="130dp"
        android:layout_height="43dp"
        android:background="@drawable/round_btn3"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/continue_btn"
        android:textColor="#FEF8EC"
        android:textSize="14sp"
        app:backgroundTint="#955B5A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.79"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.93" />

    <TextView
        android:id="@+id/mood_bg"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:background="@drawable/custom_shape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />


    <TextView
        android:id="@+id/text_mood"
        android:layout_width="313dp"
        android:layout_height="97dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/mood_tag_txt"
        android:textColor="#253350"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/mood_bg"
        app:layout_constraintVertical_bias="0.093" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.166"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_mood"
        app:layout_constraintVertical_bias="0.0">

        <RadioButton
            android:id="@+id/rad_btn_happy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/happy"
            android:textColor="#253350"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.155"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <RadioButton
            android:id="@+id/rad_btn_sad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/sad"
            android:textColor="#253350"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.155"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <RadioButton
            android:id="@+id/rad_btn_angry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/angry"
            android:textColor="#253350"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.167"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <RadioButton
            android:id="@+id/rad_btn_surprised"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/fearful"
            android:textColor="#253350"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.764"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.009" />

        <RadioButton
            android:id="@+id/rad_btn_fearful"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/disgusted"
            android:textColor="#253350"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.71"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.096" />

        <RadioButton
            android:id="@+id/rad_btn_disgusted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/surprised"
            android:textColor="#253350"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.803"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.0" />

    </RadioGroup>

    <ImageView
        android:id="@+id/mood_image"
        android:layout_width="283dp"
        android:layout_height="232dp"
        android:contentDescription="@string/mood_img"
        app:layout_constraintBottom_toTopOf="@+id/mood_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.592" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="157dp"
        android:layout_height="170dp"
        android:contentDescription="@string/mood_des"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/mood_bg"
        app:layout_constraintHorizontal_bias="0.83"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_mood"
        app:layout_constraintVertical_bias="0.06" />


</androidx.constraintlayout.widget.ConstraintLayout>

