<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#253350"
    tools:context=".questions">


    <EditText
        android:id="@+id/question1"
        android:layout_width="327dp"
        android:layout_height="65dp"
        android:layout_centerHorizontal="true"
        android:autofillHints=""
        android:background="@drawable/round_btn2"
        android:ems="10"
        android:hint="@string/q1"
        android:inputType="textShortMessage"
        android:padding="20dp"
        android:textColor="#FEF8EC"
        android:textSize="15sp"
        android:fontFamily="@font/roboto_bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15"
        app:layout_constraintVertical_bias="0.066" />

    <EditText
        android:id="@+id/question2"
        android:layout_width="327dp"
        android:layout_height="65dp"
        android:layout_centerHorizontal="true"
        android:autofillHints=""
        android:background="@drawable/round_btn2"
        android:ems="10"
        android:hint="@string/q2"
        android:inputType="textShortMessage"
        android:padding="20dp"
        android:textColor="#FEF8EC"
        android:textSize="15sp"
        android:fontFamily="@font/roboto_bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question1"
        app:layout_constraintVertical_bias="0.065" />

    <EditText
        android:id="@+id/question3"
        android:layout_width="327dp"
        android:layout_height="65dp"
        android:layout_centerHorizontal="true"
        android:autofillHints=""
        android:background="@drawable/round_btn2"
        android:ems="10"
        android:hint="@string/q3"
        android:inputType="textShortMessage"
        android:padding="20dp"
        android:textColor="#FEF8EC"
        android:textSize="15sp"
        android:fontFamily="@font/roboto_bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question2"
        app:layout_constraintVertical_bias="0.078" />

    <EditText
        android:id="@+id/question4"
        android:layout_width="327dp"
        android:layout_height="65dp"
        android:layout_centerHorizontal="true"
        android:autofillHints=""
        android:background="@drawable/round_btn2"
        android:ems="10"
        android:hint="@string/q4"
        android:inputType="textShortMessage"
        android:padding="20dp"
        android:textColor="#FEF8EC"
        android:textSize="15sp"
        android:fontFamily="@font/roboto_bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question3"
        app:layout_constraintVertical_bias="0.121" />

    <EditText
        android:id="@+id/question5"
        android:layout_width="327dp"
        android:layout_height="65dp"
        android:layout_centerHorizontal="true"
        android:autofillHints=""
        android:background="@drawable/round_btn2"
        android:ems="10"
        android:hint="@string/q5"
        android:inputType="textShortMessage"
        android:padding="20dp"
        android:textColor="#FEF8EC"
        android:textSize="15sp"
        android:fontFamily="@font/roboto_bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question4"
        app:layout_constraintVertical_bias="0.166" />

    <Button
        android:id="@+id/confirm_q_btn"
        android:layout_width="327dp"
        android:layout_height="67dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/round_btn2"
        android:fontFamily="@font/roboto_bold"
        android:paddingLeft="16dp"
        android:paddingTop="0dp"
        android:paddingRight="16dp"
        android:paddingBottom="0dp"
        android:text="@string/confirm_q"
        android:textSize="26sp"
        app:backgroundTint="#C29E56"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question5" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center_horizontal"
        android:text="@string/guide_questions"
        android:textColor="#FEF8EC"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.087" />

</androidx.constraintlayout.widget.ConstraintLayout>